[workspace]
resolver = "2"
members = ["fust", "util", "webserver"]
# exclude = ["crates/foo", "path/to/other"]

default-members = ["fust"]

[workspace.package]
edition = "2021"
authors = ["Atlanssia <hi@atlanssia.com>"]

[workspace.dependencies]
webserver = { path = "webserver" }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.7"
serde = "1.0.213"
chrono = "0.4.38"
humansize = "2.1.3"
serde_derive = "1.0.213"
sysinfo = "0.32.0"
humantime = "2.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
