[workspace]
resolver = "2"
members = [ "config","fust", "sink", "source", "transform", "util", "webserver"]
# exclude = ["crates/foo", "path/to/other"]

default-members = ["fust"]

[workspace.package]
edition = "2021"
authors = ["Atlanssia <hi@atlanssia.com>"]

[workspace.dependencies]
webserver = { path = "webserver" }
source = { path = "source" }
sink = { path = "sink" }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.7"
serde = "1.0.214"
chrono = "0.4.38"
humansize = "2.1.3"
serde_derive = "1.0.214"
sysinfo = "0.32.0"
humantime = "2.1.0"
toml = "0.8.19"
serde_json = "1.0.132"

[workspace.lints.rust]
unsafe_code = "forbid"
