[workspace]
resolver = "2"
members = [ "config", "fust", "sink", "source", "transform", "util", "webserver"]
# exclude = ["crates/foo", "path/to/other"]

default-members = ["fust"]

[workspace.package]
edition = "2021"
authors = ["Atlanssia <hi@atlanssia.com>"]

[workspace.dependencies]
webserver = { path = "webserver" }
source = { path = "source" }
sink = { path = "sink" }
config = { path = "config" }
util = { path = "util" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.7.9"
serde = "1.0.215"
chrono = "0.4.38"
humansize = "2.1.3"
serde_derive = "1.0.215"
sysinfo = "0.33.0"
humantime = "2.1.0"
toml = "0.8.19"
serde_json = "1.0.133"
tempfile = "3.14.0"
deadpool-postgres = "0.14.0"
tokio-stream = "0.1.17"

[workspace.lints.rust]
unsafe_code = "forbid"
